--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/m1000x1000.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AMURADZAKI'S LINKTREE</title>
+    <title>REDCODE LINKTREE</title>
   </head>
   <body>
     <div id="root"></div>
